primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Chat_Summary__c/Chat_Summary__c.object-meta.xml
<CustomObject>
    <label>Chat Summary</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Chat Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>