primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Chat_Summary__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Chat Summaries</relationshipLabel>
    <relationshipName>Chat_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>