primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Chat_Summary__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <externalId>true</externalId>
    <label>Customer ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>