primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Chat_Summary__c/fields/Summary_Text__c.field-meta.xml
<CustomField>
    <fullName>Summary_Text__c</fullName>
    <label>Summary Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>