primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Chat_Summary__c/fields/Topics_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Topics_Discussed__c</fullName>
    <label>Topics Discussed</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>